Fixed padding for the first alignment button in the Image dialog toolbar (#596)

--- a/src/main/resources/assets/styles/inputtype/text/htmlarea/image-dialog.less
+++ b/src/main/resources/assets/styles/inputtype/text/htmlarea/image-dialog.less
@@ -133,10 +133,6 @@
             font-size: 18px;
             background-color: transparent;
 
-            &:first-child {
-              padding-left: 0;
-            }
-
             &:before {
               display: block;
             }
